--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             
             <div class = "videoInfoDiv">
               <a class = "videoLink" href = "https://www.youtube.com/watch?v=Jl9V9BsB2CU">
-                <p class = "videoTitleParagraph">a (brawlhalla) discord argument at 4am</p>
+                <p class = "videoTitleParagraph">a (brawlhalla) discord argument at 4am: THE SEQUEL</p>
               </a>
               <a class = youtuberName href = "https://www.youtube.com/@Stephanafro">
                 <p class = "videoAuthorParagraph">Stephanafro</p>
